[package]
name = "tw2s"
version = "1.0.20"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.70"
repository = "https://github.com/magiclen/tw2s"
homepage = "https://magiclen.org/tw2s"
keywords = ["chinese", "traditional", "simple", "conversion"]
categories = ["command-line-utilities"]
description = "A simple tool for converting Traditional Chinese(TW) to Simple Chinese."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
clap = { version = "4", features = ["derive"] }
concat-with = "0.2"
terminal_size = "0.3"

anyhow = "1"

[dependencies.opencc-rust]
version = "1.1"
features = ["static-dictionaries"]
